Kata5: Linear Algebra Part 2

--- a/tutorials/LinearAlgebra/LinearAlgebra.ipynb
+++ b/tutorials/LinearAlgebra/LinearAlgebra.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -487,13 +487,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def matrix_inverse(a : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    x = 1/((a[0][0]*a[1][1])-(a[1][0]*a[0][1]))\n",
+    "    b = create_empty_matrix(2, 2)\n",
+    "    b[0][0] = a[1][1]\n",
+    "    b[0][1] = -a[0][1]\n",
+    "    b[1][0] = -a[1][0]\n",
+    "    b[1][1] = a[0][0]\n",
+    "    for i in range(2):\n",
+    "        for j in range(2):\n",
+    "            b[i][j] = x*b[i][j]\n",
+    "    \n",
+    "    return b"
    ]
   },
   {
@@ -576,13 +594,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def transpose(a : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    b = create_empty_matrix(len(a[0]), len(a))\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(len(a[0])):\n",
+    "            b[j][i] = a[i][j]\n",
+    "    return b"
    ]
   },
   {
@@ -642,13 +672,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
-    "def conjugate(a : Matrix) -> Matrix:\n",
-    "    return ..."
+    "def conjugate(a : Matrix) -> Matrix:    \n",
+    "    b = create_empty_matrix(len(a), len(a[0]))\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(len(a[0])):\n",
+    "            b[i][j] = complex(a[i][j].real, -(a[i][j].imag))\n",
+    "    return b"
    ]
   },
   {
@@ -693,13 +735,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def adjoint(a : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    new = conjugate(a)\n",
+    "    ans = transpose(new)\n",
+    "    return ans"
    ]
   },
   {
@@ -746,15 +798,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "from pytest import approx\n",
     "\n",
     "@exercise\n",
     "def is_matrix_unitary(a : Matrix) -> bool:\n",
-    "    return ..."
+    "    c = matrix_mult(a,adjoint(a))\n",
+    "    for i in range(len(c)):\n",
+    "        for j in range(len(c)):\n",
+    "            if (i == j):\n",
+    "                if (c[i][j] != approx(1)):\n",
+    "                    return False\n",
+    "            else:\n",
+    "                if (c[i][j] != approx(0)):\n",
+    "                    return False\n",
+    "    return True"
    ]
   },
   {
@@ -863,13 +932,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def inner_prod(v : Matrix, w : Matrix) -> complex:\n",
-    "    return ..."
+    "    adjointA = adjoint(v)\n",
+    "    return matrix_mult(adjointA,w)[0][0]"
    ]
   },
   {
@@ -899,13 +977,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 255,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
+    "import math\n",
+    "\n",
     "@exercise\n",
     "def normalize(v : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    b = create_empty_matrix(len(v), 1)\n",
+    "    norm = math.sqrt(inner_prod(v,v).real)\n",
+    "    for i in range(len(v)):\n",
+    "        b[i][0] = v[i][0]/norm \n",
+    "    return b"
    ]
   },
   {
@@ -959,13 +1051,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def outer_prod(v : Matrix, w : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    adjointA = adjoint(w)\n",
+    "    return matrix_mult(v,adjointA)"
    ]
   },
   {
@@ -1064,13 +1165,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def tensor_product(a : Matrix, b : Matrix) -> Matrix:\n",
-    "    return ..."
+    "    aRows = len(a)       # the number of rows for matrix a\n",
+    "    aColumns = len(a[0]) # the number of columns for matrix a\n",
+    "    bRows = len(b)       # the number of rows for matrix b\n",
+    "    bColumns = len(b[0]) # the number of columns for matrix b\n",
+    "    \n",
+    "    c = create_empty_matrix(len(a)*len(b), len(a[0])*len(b[0]))\n",
+    "    for i in range(len(a)):\n",
+    "        for j in range(len(a[0])):\n",
+    "            for k in range(len(b)):\n",
+    "                for l in range(len(b[0])):\n",
+    "                    c[i * bRows + k][j * bColumns + l] = a[i][j] * b[k][l]\n",
+    "    return c"
    ]
   },
   {
