Kata 7: Teleportation Exercises 1.1-1.6

--- a/Teleportation/Teleportation.ipynb
+++ b/Teleportation/Teleportation.ipynb
@@ -41,14 +41,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/x-qsharp-data": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T11_Entangle \n",
     "\n",
     "operation Entangle (qAlice : Qubit, qBob : Qubit) : Unit {\n",
-    "    // ...\n",
+    "    H(qAlice);\n",
+    "    CNOT(qAlice,qBob)\n",
     "}"
    ]
   },
@@ -71,15 +84,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/x-qsharp-data": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T12_SendMessage \n",
     "\n",
     "operation SendMessage (qAlice : Qubit, qMessage : Qubit) : (Bool, Bool) {\n",
-    "    // ...\n",
-    "    return (false, false);\n",
+    "    CNOT(qMessage,qAlice);\n",
+    "    H(qMessage);\n",
+    "    return (M(qMessage) == One, M(qAlice) == One);\n",
     "}"
    ]
   },
@@ -100,14 +126,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/x-qsharp-data": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T13_ReconstructMessage \n",
     "\n",
     "operation ReconstructMessage (qBob : Qubit, (b1 : Bool, b2 : Bool)) : Unit {\n",
-    "    // ...\n",
+    "    if (b2) {\n",
+    "        X(qBob);\n",
+    "    }if (b1) {\n",
+    "        Z(qBob);\n",
+    "    }\n",
     "}"
    ]
   },
@@ -129,14 +171,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/x-qsharp-data": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T14_StandardTeleport\n",
     "\n",
     "operation StandardTeleport (qAlice : Qubit, qBob : Qubit, qMessage : Qubit) : Unit {\n",
-    "    // ...\n",
+    "    Entangle(qAlice,qBob);\n",
+    "    let bits = SendMessage(qAlice,qMessage);\n",
+    "    ReconstructMessage(qBob, bits);\n",
     "}"
    ]
   },
@@ -161,15 +217,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/x-qsharp-data": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T15_PrepareAndSendMessage\n",
     "\n",
     "operation PrepareAndSendMessage (qAlice : Qubit, basis : Pauli, state : Bool) : (Bool, Bool) {\n",
-    "    // ...\n",
-    "    return (false, false);\n",
+    "    use qMessage = Qubit();\n",
+    "    if (state){\n",
+    "        X(qMessage);\n",
+    "    }\n",
+    "    \n",
+    "    PreparePauliEigenstate(basis, qMessage);\n",
+    "    let bits = SendMessage(qAlice,qMessage);\n",
+    "    return bits;\n",
     "}"
    ]
   },
@@ -194,16 +268,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/x-qsharp-data": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T16_ReconstructAndMeasureMessage\n",
     "\n",
     "operation ReconstructAndMeasureMessage (qBob : Qubit, (b1 : Bool, b2 : Bool), basis : Pauli) : Bool {\n",
-    "        \n",
-    "    // ...\n",
-    "    return false;\n",
+    "    ReconstructMessage(qBob,(b1, b2));\n",
+    "    return Measure([basis], [qBob]) == One;\n",
     "}"
    ]
   },
