--- a/GroversAlgorithm/GroversAlgorithm.ipynb
+++ b/GroversAlgorithm/GroversAlgorithm.ipynb
@@ -75,14 +75,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/x-qsharp-data": "\"Success!\"",
+      "text/plain": [
+       "Success!"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%kata T11_Oracle_AllOnes \n",
     "\n",
     "operation Oracle_AllOnes (queryRegister : Qubit[], target : Qubit) : Unit is Adj {\n",
-    "    // ...\n",
+    "    Controlled X(queryRegister, target);\n",
     "}"
    ]
   },
